--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -95,7 +95,22 @@ The goal of the project is to assess the reliability of developed projects; in p
 
 \section{Methodological steps conducted to address the goals}
 \subsection{First comparison between projects}
-As introduced, the project started with the comparison among already developed projects and datasets in order to extract important feature from each project. The first considered project has been that one developed by Kennedy et al. \cite{Kennedy}, which examine a passive attack on home smart speaker able to infer users' voice commands. The project focuses on a particular metric, the so called semantic distance. Anche se questo progetto si è focalizzato su un punto importante della privacy; il ragionamento che sta dietro al calcolo fatto per trovare la distanza semantica sembra essere abbastanza complicato; per questo motivo l'idea di estendere tale progetto è stata trascurata. Il secondo progetto considerato è quello di Alexa real time analyzer che ci offre una visione più ampia sui dati catturati dalla rete e sulle metriche considerate
+As introduced, the project started with the comparison among already developed projects and datasets in order to extract important feature from each project. The first considered project has been that one developed by Kennedy et al. \cite{Kennedy}, which examine a passive attack on home smart speaker able to infer users' voice commands. The project focuses on a particular metric, the so called semantic distance. Anche se questo progetto si è focalizzato su un punto importante della privacy; il ragionamento che sta dietro al calcolo fatto per trovare la distanza semantica sembra essere abbastanza complicato; per questo motivo l'idea di estendere tale progetto è stata trascurata. Il secondo progetto considerato è quello di Alexa real time analyzer che ci offre una visione più ampia sui dati catturati dalla rete e sulle metriche considerate; the model created from this project seems to be powerful on data retrieved by the creator; for this reason we want to assess if the model works good also on other data.
+\subsection{Dataset creation}
+Since the Kennedy project offers a good set of captured packets we've decided to use these files to produce a dataset which is compatible with the format requested from the second project. In particular, since the existing script was able to perform live capturing from a live scenario, we have modified this script to guarantee both capture: from files and from live context; in this way we have automated the creation of dataset starting from both contexts.
+The decision of creating a dataset from the captured files has been taken for three main reasons:
+\begin{itemize}
+\item To check if the model created from the second project works well on unseen data;
+\item To create a new model (using various ML technique, that we will see below) based on these new data;
+\item To assess the possibility of automatically collect new data.
+\end{itemize}
+\begin{figure}[h!]
+        \includegraphics[width=0.8\linewidth]{img/parser.png}
+        \caption{Parser able to do live or files capture}
+        \label{fig:parser}
+    \end{figure}
+In this phase no check mechanisms has been take in place; in the following subsection we will see these mechanisms.
+\subsection{Dataset checks for integrity and compatibility}
 
 \section{Methodology}
 In order to implement the tool, we've decided to follow each of these steps:
