--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -95,7 +95,7 @@ The goal of the project is to assess the reliability of developed projects; in p
 
 \section{Methodological steps conducted to address the goals}
 \subsection{First comparison between projects}
-As introduced, the project started with the comparison among already developed projects and datasets in order to extract important feature from each project. The first considered project has been that one developed by Kennedy et al. \cite{Kennedy}, which examine a passive attack on home smart speaker able to infer users' voice commands. The project focuses on a particular metric, the so called semantic distance. Anche se questo progetto si è focalizzato su un punto importante della privacy; il ragionamento che sta dietro al calcolo fatto per trovare la distanza semantica sembra essere abbastanza complicato; per questo motivo l'idea di estendere tale progetto è stata trascurata. Il secondo progetto considerato è quello di Alexa real time analyzer che ci offre una visione più ampia sui dati catturati dalla rete e sulle metriche considerate; the model created from this project seems to be powerful on data retrieved by the creator; for this reason we want to assess if the model works good also on other data.
+As introduced, the project started with the comparison among already developed projects and datasets in order to extract important feature from each project. The first considered project has been that one developed by Kennedy et al. \cite{Kennedy}, which examine a passive attack on home smart speaker able to infer users' voice commands. The project focuses on a particular metric, the so called semantic distance.Even if this project has a focus on a critical point of privacy, it seems  quite complicated find out the reasoning inside the semantic distance; that's why we have decided to not extend this project. The second project considered is "Alexa real time analyzer" which give us a better vision on caught data from network and considered metrics; the model created from this project seems to be powerful on data retrieved by the creator; for this reason we want to assess if the model works good also on other data.
 \subsection{Dataset Creation}
 Since the Kennedy project offers a good set of captured packets we've decided to use these files to produce a dataset which is compatible with the format requested from the Boi's project. In particular, since the existing script was able to perform live capturing from a live scenario, we have modified this script to guarantee both capture: from files and from live context; in this way we have automated the creation of dataset starting from both contexts.
 The decision of creating a dataset from the captured files has been taken for three main reasons:
