[Review and Documentation] Added docs and mlflow modification

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -104,7 +104,7 @@ In order to implement the tool, we've decided to follow each of these steps:
 \end{enumerate}
 Clearly, all these steps will be conducted using a MLOps approach.
 \subsection{First comparison between projects}
-As introduced, the project started with the comparison among already developed projects and datasets in order to extract important feature from each project. The first considered project has been that one developed by Kennedy et al. \cite{Kennedy}, which examine a passive attack on home smart speaker able to infer users' voice commands. The project focuses on a particular metric, the so called semantic distance.Even if this project has a focus on a critical point of privacy, it seems  quite complicated find out the reasoning inside the semantic distance; that's why we have decided to not extend this project. The second project considered is "Alexa real time analyzer" which give us a better vision on caught data from network and considered metrics; the model created from this project seems to be powerful on data retrieved by the creator; for this reason we want to assess if the model works good also on other data.
+As introduced, the project started with the comparison among already developed projects and datasets in order to extract important feature from each project. The first considered project has been that one developed by Kennedy et al. \cite{kennedy}, which examine a passive attack on home smart speaker able to infer users' voice commands. The project focuses on a particular metric, the so called semantic distance.Even if this project has a focus on a critical point of privacy, it seems  quite complicated find out the reasoning inside the semantic distance; that's why we have decided to not extend this project. The second project considered is "Alexa real time analyzer", developed by Boi B. which give us a better vision on caught data from network and considered metrics; the model created from this project seems to be powerful on data retrieved by the creator; for this reason we want to assess if the model works good also on other data.
 \subsection{Dataset Creation}
 Since the Kennedy project offers a good set of captured packets we've decided to use these files to produce a dataset which is compatible with the format requested from the Boi's project. In particular, since the existing script was able to perform live capturing from a live scenario, we have modified this script to guarantee both capture: from files and from live context; in this way we have automated the creation of dataset starting from both contexts.
 The decision of creating a dataset from the captured files has been taken for three main reasons:
@@ -217,8 +217,8 @@ Going deeper, we can analyze the evolution of each metric shown in the table. As
 It's clear how other metrics can be used here to assess the quality of produced models, but for didactic purpose we limite our study to this.
 \section{Conclusions}
 The aim of the project has been partially achieved, in particular we've developed a kind of ML Pipeline that follows the MLOps paradigm, where we distinguish the training phase from the Inference phase. In particular, the inference phase hasn't been covered by this project. Some study on MLFlow have been conducted, in particular we've tried to use the Model function of this framework to store the created models without any success due to problems related to database issues.
-
-
+Further conclusions regards the quality of data used; in particular the parser used for the transformation of packets into well-structured dataset is projected by starting from assumption on the structure of packets. These assumption are not well documented, by causing the un-reliability of the entire models built upon this parser.
+A complete tool able to block the packets cannot be yet released, but a strong pipeline for capturing packets and transforming these packets in well-structured data and then cleaning and preprocessing techniques have been proposed.
     \bibliographystyle{plain}
     \bibliography{biblio_ref}
 
